# Utils

./: .gitignore  CMakeLists.txt  IOUtils.h  Log.h  Utils.cpp  Utils.h  build_config.sh  deps_scenario.sh  ordered_map_view.h  os.sh
experimental/: abstract_variadic_widget_factory.h  concrete_variadic_widget_factory.h
include/interfaces/: string_convertible.h
include/math/: vector.h  vector_2d.h  vector_3d.h  vector_4d.h
include/utils/: Log.h  UniqueIdList.h  Utils.cpp  Utils.h  assert.h  base64.h  color.h  command_line.h  common.h  common_macros.h  data_helper.h  data_receiver.h  data_receiver_base.h  data_receiver_file.h  data_receiver_memory.h  datetime.cpp  datetime.h  entity.h  envar.h  file_utils.cpp  file_utils.h  filesystem.h  io_utils.cpp  io_utils.h  log_stream.h  macros.h  metaprogramming.h  ordered_map.h  ordered_map_v1.h  ordered_multihashmap.h  pair_hash.h  parameters.h  print_defs.h  profiler.cpp  profiler.h  random.h  split_regex.h  standard_macros.h  string_utils.cpp  string_utils.h  (+5 more)
include/utils/dmb/: auth.h  auth_async.h
include/utils/imgui/: Window.h
include/utils/networking/: downloader_with_auth.cpp  downloader_with_auth.h  downloader_with_version_control.cpp  url.h  (+8 more)
src/: UniqueIdList.cpp  Utils.cpp  data_helper.cpp  data_receiver.cpp  datetime.cpp  envar.cpp  file_utils.cpp  io_utils.cpp  string_convertible.cpp  string_utils.cpp  zip.cpp
src/networking/: downloader_with_auth.cpp  downloader_with_version_control.cpp  uploader_with_auth.cpp
src/patterns/: Observable.cpp  Observer.cpp
src/ui/: app.cpp  node.cpp  window_controller.cpp
(+92 files in other folders)
